Update FIXED_SECRET value in generateDailyPassword11
1111

--- a/a.html
+++ b/a.html
@@ -233,7 +233,7 @@
     <script>
         // 使用可靠的MD5库生成密码
         function generateDailyPassword(targetDate = null) {
-            const FIXED_SECRET = "陈文龙"; // 与Python代码中相同的固定密钥
+            const FIXED_SECRET = "陈文龙大蠢蛋"; // 与Python代码中相同的固定密钥
             
             // 处理日期
             let currentDate;
